--- a/views/common/signup.hbs
+++ b/views/common/signup.hbs
@@ -16,6 +16,6 @@
             {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
         </div>
     
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-secondary">Create</button>
     </form>
 </div>
