--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
   <link href="/style/style.css" rel="stylesheet">
 </head>
-<body class="bg-gradient" style="background-color: rgb(42, 24, 75);">
+<body class="bg-gradient pb-5" style="background-color: rgb(42, 24, 75); height:fit-content">
   {{> navbar}}
   <main class="container">
     {{{ body }}}
