--- a/views/users/partials/events.hbs
+++ b/views/users/partials/events.hbs
@@ -1,5 +1,4 @@
 <div class="card-body">
-    <h5 class="card-title">My Events</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title text-light">My Events</h5>
+    <p class="card p-5 border-light">Working on it. Coming soon!</p>
 </div>
