--- a/views/users/profile/home.hbs
+++ b/views/users/profile/home.hbs
@@ -80,7 +80,7 @@
                         <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-user"></i> Height<p>{{user.height}} cm</p></li>
                         <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-compass"></i> Orientation<p>{{user.orientation}}</p></li>
                         <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-heart"></i> Status<p>{{user.status}}</p></li>
-                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-star"></i> Here for<p>{{user.hereFor}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-star"></i> Here for<p>{{#each user.hereFor as |value|}} {{value}},  {{/each}}</p></li>
                     </ul>
                 </div>
                 </div>
