--- a/views/common/match.hbs
+++ b/views/common/match.hbs
@@ -3,7 +3,7 @@
         {{#isUser user ../currentUser}}
         <div class="card col-3 d-flex flex-column justify-content-between me-5 mb-2 p-1 border-light" style="width: 250px; height: auto">
             <div class="d-flex flex-column">
-                <img src="{{user.avatar}}" class="card-img-top" alt="avatar">
+                <img src="{{user.avatar}}" class="card-img-top card-avatar" alt="avatar">
                 <div class="card-body ">
                     <h5 class="card-title">{{user.username}}</h5>
                     <p class="card-text">Favorite artists:
