--- a/views/users/profile/settings.hbs
+++ b/views/users/profile/settings.hbs
@@ -84,6 +84,6 @@
     <input type="file" class="form-control" name="photos" multiple>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit changes</button>
+    <button class="btn btn-secondary" type="submit">Submit changes</button>
   </div>
 </form>
