--- a/views/users/profile/settings.hbs
+++ b/views/users/profile/settings.hbs
@@ -83,6 +83,16 @@
     <label class="input-group-text" for="inputGroupFile01"><i class="fa fa-image"></i></label>
     <input type="file" class="form-control" name="photos" multiple>
   </div>
+  <div>
+     <div class="d-flex flex-wrap">
+      {{#each user.photos as |photo|}}
+      <div class="m-2 d-flex flex-column">
+        <img src={{photo}} style="width: 400px; height: 200px">
+        <a href="/users/{{../currentUser.username}}/deletePhoto?id={{photo}}" class="mt-1 btn btn-danger"><i class="fa fa-trash"></i></a>
+      </div>
+      {{/each}}
+    </div>
+  </div>
   <div class="col-12">
     <button class="btn btn-secondary" type="submit">Submit changes</button>
   </div>
