--- a/views/common/login.hbs
+++ b/views/common/login.hbs
@@ -1,5 +1,6 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex flex-column justify-content-center align-items-center">
   <h1 class="display-1">Welcome to Tastebuds!</h1>
+  <p>Connect with people with music taste like yours!</p>
 </div>
 
 <div class="d-flex flex-column align-items-center justify-content-center">
